syntax = "proto3";

package buffs;

message Message {
  string route = 1;
  string contents = 2;
}

message SendReq {
  Message msg = 1;
}

message SendRes {}

message AttachReq {
  // id is a requested ID only; no gaurantee
  string id = 1;

  // route is a requested route; the server can kick it back
  string route = 2;
}

message AttachRes {
  Message message = 1;
}

message DiscoverReq {
  // TODO: this may need to be changed to clients, listeners, and nodes or something; a map of network maps? idk if getting too complicated
  // string node = 1;
}

message DiscoverRes {
  // TODO: this may need to be changed to clients, listeners, and nodes or something; a map of network maps? idk if getting too complicated
  repeated string nodes = 1;
}

service Node {
  rpc Send(stream SendReq) returns (SendRes);
  rpc Attach(AttachReq) returns (stream AttachRes);
  rpc Discover(DiscoverReq) returns (DiscoverRes);
}
